<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="247dp"
        android:layout_gravity="center_horizontal"
        android:layout_margin="5dp"
        android:layout_marginTop="10dp"
        android:src="@drawable/p1" />


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/colorGreen5"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        android:layout_weight="1"
        android:text="@string/target_labe1"
        android:textSize="30sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_weight="1"
        android:layout_marginRight="25dp"
        android:layout_marginLeft="10dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/target"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint2"
            android:textColor="@color/colorGreen4"
            android:layout_weight="1"
            android:paddingLeft="10dp"
            android:textSize="22sp"
            android:textStyle="bold" />


        <Button
            android:id="@+id/button1"
            android:layout_width="match_parent"
            android:layout_weight="2"
            android:onClick="changeTarget"
            android:textColor="@color/colorgray"
            android:background="@drawable/shape1"
            android:layout_height="wrap_content"
            android:text="@string/btn1"
            android:textSize="18sp"/>

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/colorGreen5"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:layout_weight="1"
        android:text="@string/present_labe1"
        android:textSize="30sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_marginLeft="10dp"
        android:layout_marginRight="25dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/present"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:layout_weight="1"
            android:textSize="22sp"
            android:textColor="@color/colorGreen4"
            android:hint="@string/hint1"
            android:textStyle="bold" />

        <Button
            android:id="@+id/button2"
            android:layout_width="match_parent"
            android:layout_weight="2"
            android:background="@drawable/shape1"
            android:onClick="changePresent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorgray"
            android:text="@string/btn2"
            android:textSize="18sp"/>

</LinearLayout>

    <Button
        android:id="@+id/button3"
        android:layout_width="250dp"
        android:layout_marginTop="35dp"
        android:layout_marginBottom="40dp"
        android:layout_gravity="center"
        android:layout_weight="0.5"
        android:onClick="savePresent"
        android:background="@drawable/shape2"
        android:layout_height="wrap_content"
        android:text="@string/btn3"
        android:textColor="@color/colorwhite"
        android:textSize="20sp"/>

</LinearLayout>